--- a/index.html
+++ b/index.html
@@ -140,7 +140,6 @@
       #skills{display:none;}
     }
 
-
     .skills>.wrapper {
       display: flex;
       justify-content: space-between;
@@ -149,8 +148,6 @@
     .skills>.wrapper>:first-child {
       margin-right: 24px;
     }
-
-    .skills>.wrapper>#skills {}
 
     .skills>.wrapper>ul {
       color: #666;
@@ -166,17 +163,11 @@
     }
   </style>
   <style>
-    .openSource {}
-
-    .openSource>h2 {}
-
     .openSource header img {
       position: absolute;
       top: 0;
       right: 0;
     }
-
-    .openSource>ul {}
 
     .openSource>ul>li {
       margin-bottom: 24px;
@@ -187,16 +178,8 @@
       display: flex;
       justify-content: space-between;
     }
-
-    .openSource h3 {}
   </style>
   <style>
-    .jobs {}
-
-    .jobs>h2 {}
-
-    .jobs>ol {}
-
     .jobs>ol>li {
       margin: 12px 0;
     }
@@ -269,8 +252,9 @@
     </section>
     <section class="others">
       <h2>个人博客，Github</h2>
-      <a href="http://www.gaozhenchao.cn/">自己搭建的个人博客</a>
-      <a href="https://github.com/Starlogzzz">我的 GitHub</a>
+      <a class="othersa" href="http://www.gaozhenchao.cn/">自己搭建的个人博客  |</a>
+      <a class="othersa" href="https://github.com/Starlogzzz">我的 GitHub  |</a>
+      <a class="othersa" href="http://gao_zhen_chao.gitee.io/mycv-webinternship/">本简历由html制作，预览地址</a>
   </section>
     <section class="projects">
         <section class="education">
