--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     </section>
     <section class="others">
       <h2>个人博客，Github</h2>
-      <a class="othersa" href="http://www.gaozhenchao.cn/">自己搭建的个人博客  |</a>
+      <a class="othersa" href="http://www.gaozhenchao.cn/">自己搭建的个人博客(目前已有22篇文章)  |</a>
       <a class="othersa" href="https://github.com/Starlogzzz">我的 GitHub  |</a>
       <a class="othersa" href="http://gao_zhen_chao.gitee.io/mycv-webinternship/">本简历由html制作，预览地址</a>
   </section>
@@ -268,10 +268,10 @@
               <ul>
                   <li>熟练使用<strong>HTML、CSS、原生JS等技术</strong>，能独立分析和解决一些基础问题</li>
                   <li>熟悉 <strong>ES6</strong> ，包括 let / Promise / await / 析构赋值</li>
-                  <li>熟练掌握 <strong>Vue全家桶</strong>的使用，包括 VueCli、VueRouter、Vuex 等</li>
-                  <li>掌握<strong>Bootstrap</strong>，<strong>jQuery</strong> 使用方法 </li>
+                  <li>掌握 <strong>Vue全家桶</strong>的使用，包括 VueCli、VueRouter、Vuex 等</li>
+                  <li>掌握<strong>React</strong>，<strong>Redux</strong>，<strong>Hooks</strong> 使用方法 </li>
                   <li>了解 <strong>Node.js</strong>，<strong>express</strong>，<strong>Mongodb</strong> 的基本使用方法 </li>
-                  <li>了解 <strong>canvas</strong>绘画工具，熟练使用 <strong>Git</strong> 托管代码 </li>
+                  <li>了解 <strong>webpack</strong>打包工具，掌握 <strong>Git</strong> 使用方法 </li>
               </ul>
           </div>
       </section>
@@ -280,25 +280,25 @@
             <!-- 项目1 -->
             <li>
                 <header>
-                    <h3>购物街移动端</h3> <span> <a href="https://github.com/Starlogzzz/supermail">源码链接</a> </span>
+                    <h3>活力电商后台管理系统（admin，123456）</h3> <span> <a href="https://github.com/Starlogzzz/vue_shop">源码链接</a> <a href="http://120.53.125.40:1718/#/login">项目预览</a></span>
                 </header>
-                <p> 这是一个基于 <strong>Vue全家桶</strong> 包括 <strong>Vue-cli Vuex vue-router</strong> 的移动端购物街应用。 </p>
-                <p> 本项目遵循组件化开发思想，单独功能模块全部抽离。使用vuex进行状态管理，使用中央事件总线进行非父子组件通信。</p>
-                <p> 制作本项目让我学习到了很多编程思想，尤其是组件化思想。并且让我掌握了vue的使用方法。 </p>
-                <strong>由于本项目使用vue-router的history模式，但gitee page不支持，所以暂无项目预览</strong>
+                <p> 一款基于 <strong>Vue</strong> / <strong>Element UI</strong> / <strong>Axios</strong>  开发的 后台管理系统。
+                </p>
+                <p> 主要使用Element ui组件库进行开发，主要实现简单的进行数据交互,实现用户信息,商品信息的增删改查,用户权限
+                  的分配等。 </p>
+                <p> 这让我更深的掌握了Vue的开发方法。 </p>
             </li>
             <!-- 项目2 -->
             <li>
                 <header>
-                    <h3>活力电商后台管理系统</h3> <span> <a href="https://github.com/Starlogzzz/vue_shop">源码链接</a></span>
+                    <h3>Starlog-music</h3> <span> <a href="https://github.com/Starlogzzz/React-web-music">源码链接</a> <a href="http://120.53.125.40:7878/#/discover/recommend">项目预览</a></span>
                 </header>
-                <p> 一款基于 <strong>Vue</strong> / <strong>Element UI</strong> / <strong>Axios</strong> / <strong>ECharts</strong> 开发的 后台管理系统。
-                </p>
-                <p> 主要使用Element ui组件库进行开发，主要实现简单的进行数据交互,实现用户信息,商品信息的增删改查,用户权限
-                  的分配等。 </p>
-                <p> 制作过程让我更加熟练使用组件库。 并且学习到了项目打包上线所需相关优化方法。 </p>
-                <strong>由于本项目使用vue-router的history模式，但gitee page不支持，所以暂无项目预览</strong>
+                <p> 这是一个基于 <strong>React</strong> 以及使用 <strong>Redux react-router hooks</strong> 开发的仿web版网易云音乐项目。<strong>（注意：本项目接口来自github开源接口，偶尔请求会请求不到数据，刷新即可）</strong> </p>
+                <p> 主要完成了网易云音乐的首页制作，包括子路由的跳转，轮播图的展示，热门推荐等。并且完成了音乐播放功能，包括歌曲的切换(上一首，下一首)，播放模式的切换(顺序播放，随机播放，单曲循环)等，还可以在榜单中点击喜爱的歌曲添加到播放列表播放。 </p>
+                <p> 本项目遵循组件化开发思想，单独功能模块全部抽离。使用redux进行状态管理，全面拥抱hooks。</p>
+                <p> 制作本项目让我学习到了很多编程思想，尤其是组件化思想。并且让我掌握了react的使用方法。 </p>
             </li>
+            
 
             <li>
                 <header>
