--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
               <div id="skills"></div>
               <ul>
                   <li>熟练使用<strong>HTML、CSS、原生JS等技术</strong>，能独立分析和解决一些基础问题</li>
-                  <li>熟悉 <strong>ES6</strong> ，包括 let / Promise / await / 析构赋值</li>
+                  <li>熟悉 <strong>ES6</strong> ，包括 let / Promise / await / 解构赋值</li>
                   <li>掌握 <strong>Vue全家桶</strong>的使用，包括 VueCli、VueRouter、Vuex 等</li>
                   <li>掌握<strong>React</strong>，<strong>Redux</strong>，<strong>Hooks</strong> 使用方法 </li>
                   <li>了解 <strong>Node.js</strong>，<strong>express</strong>，<strong>Mongodb</strong> 的基本使用方法 </li>
