--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     </section>
     <section class="others">
       <h2>个人博客，Github</h2>
-      <a class="othersa" href="http://www.gaozhenchao.cn/">自己搭建的个人博客(目前已有22篇文章)  |</a>
+      <a class="othersa" href="http://www.gaozhenchao.cn/">自己搭建的个人博客(目前已有26篇文章)  |</a>
       <a class="othersa" href="https://github.com/Starlogzzz">我的 GitHub  |</a>
       <a class="othersa" href="http://gao_zhen_chao.gitee.io/mycv-webinternship/">本简历由html制作，预览地址</a>
   </section>
@@ -270,8 +270,7 @@
                   <li>熟悉 <strong>ES6</strong> ，包括 let / Promise / await / 解构赋值</li>
                   <li>掌握 <strong>Vue全家桶</strong>的使用，包括 VueCli、VueRouter、Vuex 等</li>
                   <li>掌握<strong>React</strong>，<strong>Redux</strong>，<strong>Hooks</strong> 使用方法 </li>
-                  <li>了解 <strong>Node.js</strong>，<strong>express</strong>，<strong>Mongodb</strong> 的基本使用方法 </li>
-                  <li>了解 <strong>webpack</strong>打包工具，掌握 <strong>Git</strong> 使用方法 </li>
+                  <li>了解 <strong>webpack</strong>打包工具，了解 <strong>Node.js</strong>, 掌握 <strong>Git</strong> 使用方法 </li>
               </ul>
           </div>
       </section>
@@ -298,16 +297,6 @@
                 <p> 本项目遵循组件化开发思想，单独功能模块全部抽离。使用redux进行状态管理，全面拥抱hooks。</p>
                 <p> 制作本项目让我学习到了很多编程思想，尤其是组件化思想。并且让我掌握了react的使用方法。 </p>
             </li>
-            
-
-            <li>
-                <header>
-                    <h3>Vue拟态计算器</h3> <span> <a href="https://github.com/Starlogzzz/vue-calculator">源码链接</a> <a href="http://gao_zhen_chao.gitee.io/vue-calculator/">项目预览</a> </span>
-                </header>
-                <p> 一个基于 <strong>Vue</strong> 使用 <strong>Grid</strong> 布局开发的简单拟态计算器。 </p>
-                <p> 这是我学习完Vue之后，通过Grid布局实现的一个最近很火的<strong>拟态</strong>计算器。用户体验很棒。 </p>
-                <p> 该项目通过vue实现计算器的功能，让我了解到了一部分功能的实现逻辑。加强了我的编码能力 </p>
-            </li>
             <li class="page2">
               <header>
                   <h3>炫酷登录窗口</h3> <span> <a href="https://github.com/Starlogzzz/login-">源码链接</a> <a
@@ -318,20 +307,6 @@
           </li>
         </ol>
     </section>
-
-
-    <!-- <section class="openSource">
-        <h2>开源项目</h2>
-        <ul>
-            <li class="page2">
-                <header>
-                    <h3>炫酷登录窗口</h3> <span> <a href="https://github.com/Starlogzzz/login-">源码链接</a> <a
-                            href="http://gao_zhen_chao.gitee.io/login-/">项目预览</a> </span>
-                </header>
-                <p>这是我在学习 <strong>CSS3动画</strong>和<strong>jQuery</strong> 之后制作的一个登录窗口</p>
-            </li>
-        </ul>
-    </section> -->
     <section class="openSource">
       <h2>个人优势</h2>
       <strong>有良好的学习自驱能力</strong> <br>
