修改博客地址

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     </section>
     <section class="others">
       <h2>个人博客，Github</h2>
-      <a class="othersa" href="http://www.gaozhenchao.cn/">自己搭建的个人博客(目前已有26篇文章)  |</a>
+      <a class="othersa" href="http://www.gaozhenchao.cn/blog">自己搭建的个人博客(目前已有26篇文章)  |</a>
       <a class="othersa" href="https://github.com/Starlogzzz">我的 GitHub  |</a>
       <a class="othersa" href="http://gao_zhen_chao.gitee.io/mycv-webinternship/">本简历由html制作，预览地址</a>
   </section>
