feat: change cv name

--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
 <body>
   <article>
     <section class="bio">
-        <h1>高振超</h1> <img src="https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=3564768384,3788948434&fm=26&gp=0.jpg" alt=""
+        <h1>xxx</h1> <img src="https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=3564768384,3788948434&fm=26&gp=0.jpg" alt=""
             width="100" height="100">
-        <p> 男 | 21岁 | WEB前端开发实习生 | 大连 </p>
-        <p> 手机：18904201315 | 微信：jiaoyuezzz | 邮箱：785276471@qq.com </p>
+        <p> 男 | 21岁 | WEB前端开发实习生 | 北京 </p>
+        <p> 手机：189******* | 微信：jiaoyuezzz | 邮箱：785276471@qq.com </p>
     </section>
     <section class="others">
       <h2>个人博客，Github</h2>
